# arka

./: .arka-index  .env.example  .env.railway.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  arka_agent.py  arka_aie.py  arka_boot.sh  arka_chat.py  arka_disk.py  arka_hf_bridge.py  arka_llm.py  arka_mac_mic.py  arka_macro_events.py  arka_market_emotion.py  arka_password_vault.py  arka_paths.py  arka_pdf_rag.py  arka_phone.py  arka_platform.py  arka_predictions.py  arka_progress.py  arka_remote_server.py  arka_stock_bridge.py  arka_stock_context_worker.py  arka_stock_fundamentals.py  arka_stt_map.py  arka_talents.py  arka_turboquant_install.py  arka_turboquant_requirements.txt  arka_usage.py  arka_voice.py  arka_wake.py  arka_whatsapp_inbox.py  arka_youtube.py  arka_youtube_bulk.py  arka_youtube_research.py  arka_ytdlp_progress.py  (+23 more)
.cursor/: mcp.json.example
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml  publish.yml
aie/: auto_copy_selection.py  zip_open.py
arka-scenes/animated-robot-gallery/: index.html
arka-scenes/animated-robot-gallery-fixed/: index.html
docs/: README.md  docs.json  index.mdx  llms.txt  quickstart.mdx
docs/architecture/: repository-layout.md
docs/changelog/: 2026-07-13.mdx
docs/cn/: index.mdx  quickstart.mdx
docs/concepts/: llm.mdx  routing.mdx  security.mdx
docs/guides/: agent-hub.mdx  agent-race.mdx  agent-teams.mdx  ai-society.mdx  app-check.mdx  ascii-art.mdx  backends.mdx  background-removal.mdx  batch.mdx  bookmarks.mdx  browser-check.mdx  build-something-cool.mdx  charts.mdx  chat.mdx  cli.mdx  clipboard-history.mdx  code-convert.mdx  code-with-arka.mdx  coding-tui.mdx  coding-workflows.mdx  competitions.mdx  compose-3d.mdx  compose-slides.mdx  compose-video.mdx  configuration.mdx  council.mdx  daily-brief.mdx  data-ask.mdx  data-collection.mdx  deploy.mdx  design-first.mdx  design-memory.mdx  design-resources.mdx  dev-workflows.mdx  docker-status.mdx  edge.md  env-bridge.mdx  env-setup.mdx  exercise-dataset.mdx  free-credits.mdx  (+109 more)
docs/reference/: aliases.mdx  configuration.mdx  troubleshooting.mdx
examples/: compose_video_chart_script.json
examples/local/: test_skills.py.example  verify_stock.py.example
functions/: copyerr.fish  i.fish  to.fish
hackathon/signoz/: CURSOR_AGENT_SKILLS.md  FOUR_PILLARS.md  MCP_INTEGRATION.md  README.md
hub/: agents.json  launch.env
hub/adapters/: claude_desktop_mcp_snippet.json  cursor_mcp_snippet.json
hub/memory/: README.md  context.md  sessions_index.json  summary.json
hub/skills/: INSTALL.md  manifest.json
logs/: mcp.jsonl
message-sessions/: cli_default.json
personas/: elon.yaml  feynman.yaml  socrates.yaml  steve-jobs.yaml
quiz-memory/: python.json
recordings/: arka-demo-voiceover.txt  build_demo_video.py  capture_terminal.py  capture_terminal_extra.py  export_cli_images.py  export_cli_images_extra.py
recordings/_demo_build/: concat.txt  mcp_list.txt
recordings/signoz-screenshots/: capture_signoz_ui.py
recordings/terminal_captures/: ask_rust.txt  capabilities.txt  (+10 more)
scripts/: build_web.sh  check_docs.py  organize_repo.py  publish_pypi.sh  refetch.sh  restructure_modules.py  self_improve_loop.sh  sync_bundled.py  sync_doc_icons.py  verify_features.py
signoz/: AWS_PRIZE.md  CURSOR_AGENT_SKILLS.md  FOUR_PILLARS.md  MCP_INTEGRATION.md  README.md
tests/: test_agent_hub.py  test_app_check.py  test_ascii_art.py  test_ask_rust_fix.py  test_astronomy.py  test_auto_refetch.py  test_automation.py  test_backend_client.py  test_background_agents_cli.py  test_background_remove.py  test_batch.py  test_benchmarks.py  test_bi_dashboard.py  test_blocks.py  test_bookmarks.py  test_browser_check.py  test_bundled_sync.py  test_calendar_payload.py  test_change_guards.py  test_chart_fetch.py  test_chart_from_pdf.py  test_cli_setup_index.py  test_cli_smoke.py  test_clipboard_history.py  test_code_project.py  test_coding_summary.py  test_coding_tui.py  test_competitions.py  test_component_screenshots.py  test_compose_3d.py  test_compose_3d_backends.py  test_compose_slides.py  test_compose_video_captions.py  test_config_backup.py  test_config_payload.py  test_context7_mcp.py  test_convert_media.py  test_cool_build.py  test_council.py  test_credits_usage.py  (+215 more)
tmp/: k8s-networking-slides.meta.json  self_improve_loop_runner.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
(+647 files in other folders)
