[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arka-agent"
version = "0.1.0"
description = "Cross-platform AI agent — chat, web answers, password vault, and skill routing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Arka" }]
keywords = ["ai", "agent", "cli", "assistant", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "platformdirs>=4.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
chat = [
    "agno[groq,google,ollama]>=2.5.0",
    "openai>=1.0.0",
    "ddgs",
    "trafilatura",
    "beautifulsoup4",
    "sympy",
    "geopy",
]
voice = [
    "vosk",
    "sounddevice",
]
pdf = [
    "requests",
]
dev = [
    "ruff",
    "pytest",
]
all = [
    "arka-agent[chat,voice,pdf]",
]

[project.scripts]
arka = "arka.cli:main"

[project.urls]
Homepage = "https://github.com/arka-agent/arka"
Documentation = "https://github.com/arka-agent/arka#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arka = ["bundled/*.py", "bundled/*.example"]
