[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arka-agent"
version = "0.1.0"
description = "Cross-platform AI agent — chat, web answers, password vault, and skill routing"
readme = "README.md"
license = { text = "GPL-2.0-only" }
requires-python = ">=3.11"
authors = [{ name = "Sumit Mishra" }]
keywords = ["ai", "agent", "cli", "assistant", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "platformdirs>=4.0",
    "cryptography>=42.0",
    "qrcode>=7.4",
    "feedparser>=6.0",
]

[project.optional-dependencies]
chat = [
    "agno[groq,google,ollama]>=2.5.0",
    "openai>=1.0.0",
    "ddgs",
    "trafilatura",
    "beautifulsoup4",
    "sympy",
    "geopy",
]
voice = [
    "vosk",
    "sounddevice",
]
pdf = [
    "requests",
]
pdf-tools = [
    "pypdf>=4.0",
    "Pillow>=10.0",
    "reportlab>=4.0",
    "pymupdf>=1.24",
]
charts = [
    "matplotlib>=3.8",
]
ascii = [
    "pyfiglet>=1.0.0",
]
data = [
    "faker>=24.0",
    "openpyxl>=3.1",
]
drawings = [
    "Pillow>=10.0",
    "pymupdf>=1.24",
]
video = [
    "Pillow>=10.0",
    "edge-tts>=6.1",
    "python-pptx>=1.0",
]
vision = [
    "Pillow>=10.0",
]
whatsapp = [
    "selenium>=4.0",
    "pywhatkit>=5.4",
]
dev = [
    "build>=1.2",
    "ruff",
    "pytest",
    "twine>=5.0",
]
mcp-server = [
    "mcp>=1.0",
]
all = [
    "arka-agent[chat,voice,pdf,pdf-tools,whatsapp,charts,drawings,video]",
]

[project.scripts]
arka = "arka.cli:main"

[project.urls]
Homepage = "https://github.com/Sumit884-byte/arka"
Repository = "https://github.com/Sumit884-byte/arka"
Documentation = "https://arka-agent.mintlify.site"
Issues = "https://github.com/Sumit884-byte/arka/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arka = [
    "bundled/*.py",
    "bundled/*.example",
    "bundled/*.fish",
    "bundled/*.sh",
    "bundled/*.txt",
    "bundled/*.yaml",
    "bundled/*.html",
    "bundled/privategpt/*",
    "bundled/aie/*",
    "bundled/whatsapp/*",
    "aie/*.py",
    "fish/config.fish",
    "fish/scripts/*",
    "requirements/*.txt",
    "pdf/privategpt/*",
    "env.example",
    "teams/templates/*",
    "agent/personas/templates/*",
    "skills/**/*",
    "professions/**/*",
]

[tool.ruff.lint]
# Optional-deps modules use lazy imports after env/setup (E402).
ignore = ["E402"]
